[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-pymupdf4llm"
version = "1.27.2"
description = "An integration package connecting PyMuPDF4LLM to LangChain"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Artifex Software, Inc.", email = "info@artifex.com" },
]
requires-python = ">=3.10.0,<4.0.0"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "langchain-core>=1.0.0,<2.0.0",
  "pymupdf4llm>=1.27.2.1,<1.28.0",
]

[project.urls]
Repository = "https://github.com/pymupdf/langchain-pymupdf4llm"

[dependency-groups]
dev = [
  "ipykernel>=6.29.0,<7.0.0",
  "jupyterlab>=4.0.0,<5.0.0",
]
test = [
  "debugpy>=1.8.0,<2.0.0",
  "pytest>=8.0.0,<10.0.0",
  "pytest-asyncio>=1.2.0,<2.0.0",
  "pytest-cov>=7.1.0",
  "pytest-socket>=0.7.0,<0.8.0",
]
lint = [
  "black>=25.0.0,<26.0.0",
  "pre-commit>=4.6.0",
  "ruff>=0.13.0,<0.16.0",
]
typing = [
  "mypy>=1.17.0,<2.0.0",
  "types-requests>=2.32.0,<3.0.0",
]

[tool.uv]
default-groups = ["test"]

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_pymupdf4llm"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_unused_configs = true

[tool.coverage.run]
source = ["src/langchain_pymupdf4llm"]
omit = [
  ".venv/*",
  "notebooks/*",
  "tests/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "ISC001",
  "CPY",
  "FBT001",
  "FBT002",
  "FBT003",
  "FIX",
  "PLC0415",
  "PLR0913",
  "TC002",
  "TC003",
  "TD",
  "TRY004",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "D",
  "PLR2004",
  "S101",
  "SLF001",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --disable-socket -m 'not network' --durations=5"
markers = [
  "integration: tests that exercise integrated package behavior without public network access",
  "network: tests that require public network access and must be run explicitly",
]
